# bankster

./: .gitignore  Cargo.toml  config.json  data.db  example.env  justfile
assets/: styles.css
src/: config.rs  data.rs  error.rs  main.rs  templates.rs
src/api/: mod.rs
src/api/html/: task.rs  todo.rs
src/api/types/: mod.rs  task.rs  todo.rs
src/controllers/: mod.rs  task.rs  todo.rs
src/data_access/: mod.rs  task.rs
src/models/: task.rs  todo.rs
src/viewmodels/: mod.rs  tasks.rs  todos.rs
templates/: base.html  filter.html  index.html  login.html  nav.html  tasks.html  todo.html  todo_index.html  todos.html
templates/tasks/: details.html  edit.html  index.html  tasks.html
templates/todos/: edit.html  index.html  todo.html
