[package]
name = "kanbasta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde-json", "markdown"] }
askama_axum = { version = "0.4.0", features = ["serde-json"] }
axum = { version = "0.7.2", features = ["tracing"] }
axum-extra = "0.9.2"
axum-htmx = "0.5.0"
chrono = { version = "0.4.33", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "chrono"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
